--- a/support.html
+++ b/support.html
@@ -1,2 +1,37 @@
-<h1>Support</h1>
-<p>If you need help, contact me at BitcoinSimApp@gmail.com</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Support</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #ffffff;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      margin-top: 50px;
+    }
+
+    p {
+      margin: 20px;
+    }
+
+    a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Support</h1>
+  <p>If you need help, contact me at 
+    <a href="mailto:BitcoinSimApp@gmail.com">BitcoinSimApp@gmail.com</a>
+  </p>
+</body>
+</html>
+
