--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1>Privacy Policy</h1><p>No data collected.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    h1 {
+      margin-top: 50px;
+    }
+    p {
+      max-width: 600px;
+      margin: 20px auto;
+      line-height: 1.6em;
+    }
+    a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>
+    We do not collect any personal data from users. This app does not store information on external servers, nor does it share data with third parties. All usage is handled locally on your device.
+  </p>
+  <p>
+    If you have any questions or concerns about this policy, please contact us at 
+    <a href="mailto:BitcoinSimApp@gmail.com">BitcoinSimApp@gmail.com</a>.
+  </p>
+</body>
+</html>
+
